--- a/BOOST-AutomationAsProject/BOOST-AutomationAsProject.csproj
+++ b/BOOST-AutomationAsProject/BOOST-AutomationAsProject.csproj
@@ -6,7 +6,7 @@
 	</PropertyGroup>
 	<PropertyGroup>
 		<DataMinerType>AutomationScriptLibrary</DataMinerType>
-		<GenerateDataMinerPackage>false</GenerateDataMinerPackage>
+		<GenerateDataMinerPackage>true</GenerateDataMinerPackage>
 		<Version>1.0.0</Version>
 		<VersionComment>Initial Version</VersionComment>
 		<!-- Do NOT fill in the Organization Token here. This points to either an Environment Variable skyline__sdk__catalogpublishtoken holding the organization token or a Visual Studio User Secret holding the token. -->
